# my_2D-editor

./: .gitignore  CMakeLists.txt  README.md
src/: Ishape.hpp  main.cpp
src/data_check/: data_check.cpp  data_check.hpp
src/data_structures/: dllist.hpp  stack.hpp
src/data_structures_test/: main_test.cpp  test.cpp  test.hpp
src/ellipse/: ellipse.cpp  ellipse.hpp
src/menu/: menu.cpp  menu.hpp
src/point/: point.cpp  point.hpp
src/quadrangle/: quadrangle.cpp  quadrangle.hpp
src/segment/: segment.cpp  segment.hpp
src/triangle/: triangle.cpp  triangle.hpp
